# cpp

./: CMakeLists.txt  main.cpp
source/ctf/crypto/: crypto.cpp  fry.cpp  prog_05.c
source/ctf/reverse/: reverse.cpp
source/ctf/stegano/: brainfuck.cpp  malevich.cpp
source/trash/: main.cpp  setlocale.cpp
source/trash/common/: gcd.cpp  gcd_even.cpp  gcd_odd.cpp  is_palindrome.cpp  is_prime.cpp  is_pythagorean_prime.cpp  is_shifter_six_digit_number.cpp  lcm.cpp  main.cpp  max.cpp  min.cpp  sum_digits.cpp
source/trash/sort/: sortBarter.cpp  sortBin.cpp  sortFast.cpp  sortInsert.cpp  sortPoint.cpp  sortRock.cpp  sortShell.cpp
source/university/contest/geometry/: 01.cpp  02.cpp  03.cpp
source/university/contest/r/: 3.cpp
source/university/contest/recursion/: 01.cpp  02.cpp  03.cpp
source/university/contest/s/: 1.cpp  2.cpp  3.cpp
source/university/contest/search/: 01.cpp  02.cpp  03.cpp
source/university/contest/sequence/: 01.cpp  02.cpp  03.cpp
source/university/course/: aaa.cpp  common.cpp  main.cpp  rule.txt  task.txt
source/university/tasks/: array_1.cpp  array_2.cpp  array_3.cpp  sort_1.cpp  string_1.cpp  string_2.cpp
source/сommon/array/: common.cpp  dynamic.cpp  kt_1.cpp  kt_2.cpp  passing.cpp  return.cpp  saddle.cpp  task.cpp  test.cpp
source/сommon/file/: common.cpp  task.cpp
source/сommon/number/: common.cpp  main.cpp
source/сommon/random/: rand.c  rand.cpp
source/сommon/search/: common.cpp
source/сommon/sort/: common.cpp
