cmake_minimum_required(VERSION 3.6)
project(C++)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# set(SOURCE_FILES main.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
file(GLOB_RECURSE SOURCE_FILES *.cpp)
add_executable(common ${SOURCE_FILES})
add_executable(program main.cpp)
